--- a/favorite-things.html
+++ b/favorite-things.html
@@ -8,26 +8,51 @@
   <h2>These are a few of my favorite things.</h2>
 
   <h3>People</h3>
-  <p>Here are some of my favorite people</p>
+  <p>Here are some of my favorite <em>people</em>!</p>
   <u1>
-    <li>My brother Christopher</li>
-    <li>My mom and dad:
+    <li>
+      <a href="http://www.example.com/christopher.html">My brother <strong>Christopher</strong>
+        <img src="img/christopher.jpeg" alt="A photo of Christopher.">
+      </a>
+    </li>
+    <li>
+      My mom and dad:
       <u1>
-        <li>Steve</li>
-        <li>Carol</li>
+        <li>
+          <a href="http://www.example.com/steve.html">
+          <strong>Steve</strong>
+          <img src="img/steve.jpeg" alt="A photo of Steve.">
+          </a>
+        </li>
+        <li> 
+          <a href="http://www.example.com/carol.html">
+          <strong>Carol</strong>
+          <img src="img/carol.jpeg" alt="A photo of Carol.">
+          </a>
+        </li>
       </u1>
     </li>
-    <li>My friend Jessica</li>
-    <li>My friend Candy</li>
+    <li>
+      <a href="http://www.example.com/jessica.html">
+      My friend <strong>Jessica</strong>
+      <img src="img/jessica.jpeg" alt="A photo of Jessica.">
+      </a>
+    </li>
+    <li>
+      <a href="http://www.example.com/candy.html">
+      My friend <strong>Candy</strong>
+      <img src="img/candy.jpeg" alt="A photo of Candy.">
+      </a>
+    </li>
   </u1>
 
   <h3>Flavors of ice cream</h3>
   <p>These are my three favorites, in roder:</p>
-  <o1>
-    <li>Pistachio</li>
-    <li>Malted milk chocolate</li>
-    <li>Black licorice (really!)</li>
-  </o1>
+    <o1>
+      <li>Pistachio</li>
+      <li>Malted milk chocolate</li>
+      <li>Black licorice (really!)</li>
+    </o1>
 
   <p>Thanks for reading about me!</p>
 </body>
